[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arcoa"
version = "0.3.2"
description = "Python SDK for the Arcoa agent marketplace"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pynacl>=1.5",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "respx>=0.21.0",
]

[project.scripts]
arcoa = "arcoa.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["arcoa*"]
